cleanup stylesheets, create about page

--- a/about.html
+++ b/about.html
@@ -4,7 +4,24 @@
     <title>0x62</title>
     <link rel="stylesheet" type="text/css" href="static/css/main.css"/>
   </head>
-  <body>
-    <h1></h1>
+  <body style="height: 100vh;">
+    <h1>Hi</h1>
+    <p>
+      I'm Benjamin, also known online as <span class="text-green">0x62</span>. I am a high
+      school student in Australia, who enjoys coding, hardware, and procrastinating.
+    </p>
+    <div style="display: flex; flex-direction: column; align-items: center; text-align: center;">
+      <div>
+        <img src="static/img/python.png" width="20%" style="padding: 32px;"/>
+        <img src="static/img/ts.png" width="10%" style="padding: 32px;"/>
+      </div>
+      <h2>My favourite languages are Python and TypeScript!</h2>
+      <p>These are my most used languages, but I also know Java, C++, C#, and JavaScript.</p>
+    </div>
+
+    <br/>
+
+    <h2>Here are my coding stats since June 20, 2025!</h2>
+    <iframe src="https://github-readme-stats.hackclub.dev/api/wakatime?username=10640&api_domain=hackatime.hackclub.com&theme=darcula&custom_title=Hackatime+Stats&layout=compact&cache_seconds=0&langs_count=8" style="height: 25%; width: 30%; border: none;"></iframe>
   </body>
 </html>
