--- a/about-de.html
+++ b/about-de.html
@@ -9,6 +9,7 @@
     <p>
       Ich bin Benjamin, online auch bekannt als <span class="text-green">0x62</span>.
       Ich bin ein Schüler in Australien und mich für Programmierung, Hardware und Prokrastination.
+      Ich sprache fließend Englisch, kann mich auf Chinesisch verständigen, und Deutsch lernen.
     </p>
     <div style="display: flex; flex-direction: column; align-items: center; text-align: center;">
       <div>
