--- a/about.html
+++ b/about.html
@@ -8,7 +8,8 @@
     <h1>Hi</h1>
     <p>
       I'm Benjamin, also known online as <span class="text-green">0x62</span>. I am a high
-      school student in Australia, who enjoys coding, hardware, and procrastinating.
+      school student in Australia, who enjoys coding, hardware, and procrastinating. I am
+      fluent in English, conversational in Chinese, and learning German.
     </p>
     <div style="display: flex; flex-direction: column; align-items: center; text-align: center;">
       <div>
