--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
           command();
         });
       });
+      document.addEventListener("click", function() {
+        document.getElementById("cmd-input").focus();
+      })
     </script>
   </head>
   <body>
