--- a/projects.html
+++ b/projects.html
@@ -19,6 +19,7 @@
       <div id="projects-display">
 
       </div>
+      <p>More on my <a href="https://github.com/0x62entity" class="text-green">GitHub</a></p>
     </div>
     <footer>
       <a href="index.html" class="text-green">Back to Terminal</a>
