--- a/contact.html
+++ b/contact.html
@@ -2,15 +2,15 @@
 <html>
   <head>
     <title>0x62</title>
-    <link rel="stylesheet" type="text/css" href="static/css/main.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/css/main.css"/>
   </head>
   <body>
     <header style="display: flex; flex-direction: row; justify-content: space-between;">
       <div></div>
       <div>
         Language:
-        <a class="text-green" href="contact-zh.html">中文</a>
-        <a class="text-green" href="contact-de.html">Deutsch</a>
+        <a class="text-green" href="/zh/contact.html">中文</a>
+        <a class="text-green" href="/de/contact.html">Deutsch</a>
       </div>
     </header>
 
