--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title>0x62</title>
-    <link rel="stylesheet" type="text/css" href="static/css/main.css"/>
-    <link rel="stylesheet" type="text/css" href="static/css/term.css"/>
-    <script src="static/js/parser.js"></script>
+    <link rel="stylesheet" type="text/css" href="/static/css/main.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/css/term.css"/>
+    <script src="/static/js/parser.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function() {
         document.getElementById("term-input").addEventListener("submit", function(e) {
