--- a/zh/about.html
+++ b/zh/about.html
@@ -8,38 +8,37 @@
     <header style="display: flex; flex-direction: row; justify-content: space-between;">
       <div></div>
       <div>
-        Sprache:
+        语言：
         <a class="text-green" href="/about.html">English</a>
-        <a class="text-green" href="/zh/about.html">中文</a>
+        <a class="text-green" href="/de/about.html">Deutsch</a>
       </div>
     </header>
-    <h1>Hallo</h1>
+    <h1>你好</h1>
     <p>
-      Ich bin Benjamin, online auch bekannt als <span class="text-green">0x62</span>.
-      Ich bin ein Schüler in Australien und mich für Programmierung, Hardware und Prokrastination.
-      Ich spreche fließend Englisch, kann mich auf Chinesisch verständigen, und Deutsch lernen.
+      我是Benjamin，在网络上又称 <span class="text-green">0x62</span>. 我是一个
+      在澳洲的中学生，喜欢编程、电子、拖延。我英语流利，中文HSK4水平，在学德语。
     </p>
     <div style="display: flex; flex-direction: column; align-items: center; text-align: center;">
       <div>
         <img src="/static/img/python.png" width="20%" style="padding: 32px;"/>
         <img src="/static/img/ts.png" width="10%" style="padding: 32px;"/>
       </div>
-      <h2>Meine Lieblingssprachen sind Python und TypeScript!</h2>
-      <p>Das sind die Sprachen, die ich am häufigsten benutze, aber ich kann auch Java, C++, C#, und JavaScript.</p>
+      <h2>我最喜欢的编程语言是Python和TypeScript。</h2>
+      <p>这是我最常用的语言，但我也会Java、 C++、 C#、 JavaScript。</p>
     </div>
 
     <br/>
 
-    <h2>Hier sind meine statistiken seit dem 20. Juni 2025!</h2>
+    <h2>这是我2025/06/20之后编程的时间：</h2>
     <iframe src="https://github-readme-stats.hackclub.dev/api/wakatime?username=10640&api_domain=hackatime.hackclub.com&theme=darcula&custom_title=Hackatime+Stats&layout=compact&cache_seconds=0&langs_count=8" style="height: 25%; width: 30%; border: none;"></iframe>
 
     <footer>
-      <h3>Links</h3>
-      <a href="/index.html" class="text-green">Zurück zum Terminal</a>
+      <h3>链接</h3>
+      <a href="/index.html" class="text-green">返回终端</a>
       <a href="https://github.com/0x62entity" class="text-green">GitHub</a>
       <a href="https://wasteof.money/users/0x62" class="text-green">WasteOfMoney</a>
       <br/>
-      Email: benjamin@0x62.me
+      邮箱: benjamin@0x62.me
       <br/>
       HC Slack: @0x62
     </footer>
