--- a/zh/contact.html
+++ b/zh/contact.html
@@ -2,38 +2,29 @@
 <html>
   <head>
     <title>0x62</title>
-    <link rel="stylesheet" type="text/css" href="static/css/main.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/css/main.css"/>
   </head>
-  <body style="height: 100vh;">
+  <body>
     <header style="display: flex; flex-direction: row; justify-content: space-between;">
       <div></div>
       <div>
-        语言：
-        <a class="text-green" href="about.html">English</a>
-        <a class="text-green" href="about-de.html">Deutsch</a>
+        语言:
+        <a class="text-green" href="/contact.html">English</a>
+        <a class="text-green" href="/de/contact.html">Deutsch</a>
       </div>
     </header>
-    <h1>你好</h1>
-    <p>
-      我是Benjamin，在网络上又称 <span class="text-green">0x62</span>. 我是一个
-      在澳洲的中学生，喜欢编程、电子、拖延。我英语流利，中文HSK4水平，在学德语。
-    </p>
-    <div style="display: flex; flex-direction: column; align-items: center; text-align: center;">
-      <div>
-        <img src="static/img/python.png" width="20%" style="padding: 32px;"/>
-        <img src="static/img/ts.png" width="10%" style="padding: 32px;"/>
-      </div>
-      <h2>我最喜欢的编程语言是Python和TypeScript。</h2>
-      <p>这是我最常用的语言，但我也会Java、 C++、 C#、 JavaScript。</p>
+
+    <h1>Contact Me</h1>
+    <div>
+      <p>HC Slack: @0x62</p>
+      <p>邮箱: benjamin@0x62.me</p>
+      <p>电话: 在slack或邮件先联系我</p>
+      <p>微信: _0x62656e</p>
+      <p>Discord: 0x62_</p>
+      <p></p>
     </div>
 
-    <br/>
-
-    <h2>这是我2025/06/20之后编程的时间：</h2>
-    <iframe src="https://github-readme-stats.hackclub.dev/api/wakatime?username=10640&api_domain=hackatime.hackclub.com&theme=darcula&custom_title=Hackatime+Stats&layout=compact&cache_seconds=0&langs_count=8" style="height: 25%; width: 30%; border: none;"></iframe>
-
     <footer>
-      <h3>链接</h3>
       <a href="index.html" class="text-green">返回终端</a>
       <a href="https://github.com/0x62entity" class="text-green">GitHub</a>
       <a href="https://wasteof.money/users/0x62" class="text-green">WasteOfMoney</a>
