--- a/about.html
+++ b/about.html
@@ -2,15 +2,15 @@
 <html>
   <head>
     <title>0x62</title>
-    <link rel="stylesheet" type="text/css" href="static/css/main.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/css/main.css"/>
   </head>
   <body style="height: 100vh;">
     <header style="display: flex; flex-direction: row; justify-content: space-between;">
       <div></div>
       <div>
         Language:
-        <a class="text-green" href="about-zh.html">中文</a>
-        <a class="text-green" href="about-de.html">Deutsch</a>
+        <a class="text-green" href="/zh/about.html">中文</a>
+        <a class="text-green" href="/de/about.html">Deutsch</a>
       </div>
     </header>
     <h1>Hi</h1>
@@ -21,8 +21,8 @@
     </p>
     <div style="display: flex; flex-direction: column; align-items: center; text-align: center;">
       <div>
-        <img src="static/img/python.png" width="20%" style="padding: 32px;"/>
-        <img src="static/img/ts.png" width="10%" style="padding: 32px;"/>
+        <img src="/static/img/python.png" width="20%" style="padding: 32px;"/>
+        <img src="/static/img/ts.png" width="10%" style="padding: 32px;"/>
       </div>
       <h2>My favourite languages are Python and TypeScript!</h2>
       <p>These are my most used languages, but I also know Java, C++, C#, and JavaScript.</p>
