--- a/de/contact.html
+++ b/de/contact.html
@@ -2,15 +2,15 @@
 <html>
   <head>
     <title>0x62</title>
-    <link rel="stylesheet" type="text/css" href="static/css/main.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/css/main.css"/>
   </head>
   <body>
     <header style="display: flex; flex-direction: row; justify-content: space-between;">
       <div></div>
       <div>
         Sprache:
-        <a class="text-green" href="contact-zh.html">中文</a>
-        <a class="text-green" href="contact-en.html">English</a>
+        <a class="text-green" href="/zh/contact.html">中文</a>
+        <a class="text-green" href="/contact.html">English</a>
       </div>
     </header>
 
@@ -25,7 +25,7 @@
     </div>
 
     <footer>
-      <a href="index.html" class="text-green">Zurück zum Terminal</a>
+      <a href="/index.html" class="text-green">Zurück zum Terminal</a>
       <a href="https://github.com/0x62entity" class="text-green">GitHub</a>
       <a href="https://wasteof.money/users/0x62" class="text-green">WasteOfMoney</a>
       <br/>
