--- a/projects.html
+++ b/projects.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>0x62</title>
-    <link rel="stylesheet" type="text/css" href="static/css/main.css"/>
-    <script src="static/js/projects.js"></script>
+    <link rel="stylesheet" type="text/css" href="/static/css/main.css"/>
+    <script src="/static/js/projects.js"></script>
   </head>
   <body style="height: 100vh; display: flex; flex-direction: column; justify-content: space-between;">
     <div>
