--- a/de/contact.html
+++ b/de/contact.html
@@ -18,7 +18,7 @@
     <div>
       <p>HC Slack: @0x62</p>
       <p>Email: benjamin@0x62.me</p>
-      <p>Telefon: contact me via slack or email if you need this for some reason</p>
+      <p>Telefon: kontakt per Slack oder Email</p>
       <p>WeChat: _0x62656e</p>
       <p>Discord: 0x62_</p>
       <p></p>
