--- a/zh/contact.html
+++ b/zh/contact.html
@@ -25,7 +25,7 @@
     </div>
 
     <footer>
-      <a href="index.html" class="text-green">返回终端</a>
+      <a href="/index.html" class="text-green">返回终端</a>
       <a href="https://github.com/0x62entity" class="text-green">GitHub</a>
       <a href="https://wasteof.money/users/0x62" class="text-green">WasteOfMoney</a>
       <br/>
