--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <span class="text-green">IP: </span><span id="ipaddr"></span><br/>
       <span class="text-green">Browser: </span><span id="browser"></span><br/>
       _________________________________________<br/><br/>
-      Welcome. For a list of available commands, type 'help' or '?'.<br/>
+      <span class="text-yellow">Welcome. For a list of available commands, type 'help' or '?'.</span><br/>
     </div>
     <form id="term-input">
       visitor@0x62.me ~ $
