disable autocomplete in command field

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
     <form id="term-input">
       visitor@0x62.me: <span class="text-green">~</span> $
-      <input type="text" id="cmd-input" autofocus/>
+      <input type="text" id="cmd-input" autocomplete="off" autofocus/>
     </form>
   </body>
 </html>
