--- a/projects.html
+++ b/projects.html
@@ -11,8 +11,8 @@
         <div></div>
         <div>
           Language:
-          <a class="text-green" href="projects-zh.html">中文</a>
-          <a class="text-green" href="projects-de.html">Deutsch</a>
+          <a class="text-green" href="/zh/projects.html">中文</a>
+          <a class="text-green" href="/de/projects.html">Deutsch</a>
         </div>
       </header>
       <h1>My Projects</h1>
