--- a/contact.html
+++ b/contact.html
@@ -24,15 +24,6 @@
       <p>Discord: 0x62656e</p>
       <p></p>
     </div>
-
-    <footer>
-      <a href="index.html" class="text-green">Back to Terminal</a>
-      <a href="https://github.com/0x62entity" class="text-green">GitHub</a>
-      <a href="https://wasteof.money/users/0x62" class="text-green">WasteOfMoney</a>
-      <br/>
-      Email: benjamin@0x62.me
-      <br/>
-      HC Slack: @0x62
-    </footer>
+    <embed src="footer.html" type="text/html" width="100%"/>
   </body>
 </html>
