prepare for restructure

--- a/footer.html
+++ b/footer.html
@@ -4,9 +4,11 @@
   </head>
   <body>
     <footer>
-      <a href="index.html" class="text-green">Back to Terminal</a>
-      <a href="https://github.com/0x62entity" class="text-green">GitHub</a>
-      <a href="https://wasteof.money/users/0x62" class="text-green">WasteOfMoney</a>
+      <span class="text-green">Back to Terminal (<u>q</u>)</span>
+      <br/>
+      <span class="text-green">GitHub (<u>g</u>)</span>
+      <br/>
+      <span class="text-green">WasteOfMoney (<u>w</u>)</span>
       <br/>
       Email: benjamin@0x62.me
       <br/>
