--- a/footer.html
+++ b/footer.html
@@ -10,7 +10,7 @@
       <br/>
       <span class="text-green">WasteOfMoney (<u>w</u>)</span>
       <br/>
-      Email: benjamin@0x62.me
+      Email: 0x62@duck.com
       <br/>
       HC Slack: @0x62
     </footer>
