--- a/content/projects.html
+++ b/content/projects.html
@@ -2,24 +2,25 @@
 <html>
   <head>
     <title>0x62</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/static/css/main.css"/>
+    <script src="/static/js/localisation.js"></script>
     <script src="/static/js/projects.js"></script>
   </head>
   <body style="height: 100vh; display: flex; flex-direction: column; justify-content: space-between;">
-    <div>
-      <header style="display: flex; flex-direction: row; justify-content: space-between;">
-        <div></div>
-        <div>
-          Language:
-          <a class="text-green" href="/zh/projects.html">中文</a>
-          <a class="text-green" href="/de/projects.html">Deutsch</a>
-        </div>
-      </header>
-      <h1>My Projects</h1>
-      <div id="projects-display">
-
+    <header style="display: flex; flex-direction: row; justify-content: space-between;">
+      <div></div>
+      <div>
+        <span class="text-green" onClick="updateContent('en')"><u>English</u></span>
+        <span class="text-green" onClick="updateContent('zh')"><u>中文</u></span>
+        <span class="text-green" onClick="updateContent('de')"><u>Deutsch</u></span>
       </div>
-      <p>More on my <a href="https://github.com/0x62entity" class="text-green">GitHub</a></p>
+    </header>
+    <h1 data-i18n="my_projects"></h1>
+    <div id="projects-display">
+
     </div>
+    <p data-i18n="more_github"></p>
   </body>
 </html>
