--- a/footer.html
+++ b/footer.html
@@ -2,16 +2,17 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="/static/css/main.css"/>
+    <script src="/static/js/localisation.js"></script>
   </head>
   <body>
     <footer>
-      <span class="text-green">Back to Terminal (<u>q</u>)</span>
+      <span data-i18n="back_terminal">Back to Terminal (<u>q</u>)</span>
       <br/>
       <span class="text-green">GitHub (<u>g</u>)</span>
       <br/>
       <span class="text-green">WasteOfMoney (<u>w</u>)</span>
       <br/>
-      Email: 0x62@duck.com
+      <span data-i18n="email"></span>
       <br/>
       HC Slack: @0x62
     </footer>
