--- a/reader.html
+++ b/reader.html
@@ -40,8 +40,8 @@
     <div style="height: 85%">
       <embed id="content" type="text/html" width="100%" height="100%"/>
     </div>
-    <div id="footer" style="height: 15%;">
-      <embed src="footer.html" type="text/html" width="100%" height="100%"/>
+    <div style="height: 15%;">
+      <embed id="footer" src="footer.html?lang=en" type="text/html" width="100%" height="100%"/>
     </div>
   </body>
 </html>
