--- a/footer.html
+++ b/footer.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <footer>
-      <span data-i18n="back_terminal">Back to Terminal (<u>q</u>)</span>
+      <span class="text-green" data-i18n="back_terminal">Back to Terminal (<u>q</u>)</span>
       <br/>
       <span class="text-green">GitHub (<u>g</u>)</span>
       <br/>
