it looks good ig...

--- a/index.html
+++ b/index.html
@@ -41,13 +41,26 @@
   </head>
   <body>
     <div id="term-output">
+      <span>[ <span class="text-green">OK</span> ] Filesystem Mount.</span>
+      <br/>
+      <span>[ <span class="text-red">FAILED</span> ] Show Graphical Interface failed.</span>
+      <br/>
+      <span>[ <span class="text-green">OK</span> ] Initialise system.</span>
+      <br/>
+      <span>[ <span class="text-green">OK</span> ] Reached target System Startup.</span>
+      <br/><br/>
       _________________________________________<br/><br/>
       0x62-OS v0.1<br/>
-      <span class="text-green">IP: </span><span id="ipaddr"></span><br/>
-      <span class="text-green">Browser: </span><span id="browser"></span><br/>
-      <span class="text-green">GitHub: </span><a href="https://github.com/0x62entity/0x62.me" target="_blank">https://github.com/0x62entity/0x62.me</a><br/>
-      _________________________________________<br/><br/>
-      <span class="text-yellow">Welcome. For a list of available commands, type 'help' or '?'.</span><br/>
+      <span class="text-green">IP: </span><span id="ipaddr"></span>
+      <br/>
+      <span class="text-green">Browser: </span><span id="browser"></span>
+      <br/>
+      <span class="text-green">GitHub: </span><a href="https://github.com/0x62entity/0x62.me" target="_blank">https://github.com/0x62entity/0x62.me</a>
+      <br/>
+      _________________________________________
+      <br/><br/>
+      <span class="text-yellow">Welcome. For a list of available commands, type 'help' or '?'.</span>
+      <br/>
     </div>
     <form id="term-input">
       visitor@0x62.me: <span class="text-green">~</span> $
