--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <br/>
         <span class="text-green">Browser: </span><span id="browser"></span>
         <br/>
-        <span class="text-green">GitHub: </span><a href="https://github.com/0x62entity/0x62.me" target="_blank">https://github.com/0x62entity/0x62.me</a>
+        <span class="text-green">GitHub: </span><a href="https://github.com/0x62b/0x62.me" target="_blank">https://github.com/0x62b/0x62.me</a>
         <br/>
         _________________________________________
         <br/><br/>
