--- a/reader.html
+++ b/reader.html
@@ -4,8 +4,7 @@
     <link rel="stylesheet" type="text/css" href="/static/css/main.css"/>
     <script>
       function handleKeyDown(e) {
-        if (e.key == 'q' || e.key == 'Q') location.href = '/index.html';
-        else if (e.key == 'g' || e.key == 'G') location.href = 'https://github.com/0x62b';
+        if (e.key == 'g' || e.key == 'G') location.href = 'https://github.com/0x62b';
         else if (e.key == 'w' || e.key == 'W') location.href = 'https://wasteof.money/users/0x62';
       }
 
