--- a/reader.html
+++ b/reader.html
@@ -4,8 +4,8 @@
     <link rel="stylesheet" type="text/css" href="/static/css/main.css"/>
     <script>
       function handleKeyDown(e) {
-        if (e.key == 'g' || e.key == 'G') location.href = 'https://github.com/0x62b';
-        else if (e.key == 'w' || e.key == 'W') location.href = 'https://wasteof.money/users/0x62';
+        if (e.key == 'g' || e.key == 'G') window.open('https://github.com/0x62b');
+        else if (e.key == 'w' || e.key == 'W') window.open('https://wasteof.money/users/0x62');
         else if (e.key == 'q' || e.key == 'Q') {
           e.preventDefault();
           window.parent.closePopup();
